shio: Add org.opencastproject.engage.player.url to configure engage-player publication URL